# tinyagent

./: .gitignore  CHANGELOG.md  LLM.md  LLM_API_DOC.md  README.md  SEATBELT_FEATURES.md  build.sh  pyproject.toml  requirements.txt
docs/: code_agent_variables.md  custom_instructions.md  docker_provider.md  environment_variables.md  modal_package_installation.md  modal_provider.md  output_truncation.md  seatbelt_provider.md  security_guide.md  token_tracking.md
examples/: accounting_example.py  anthropic_prompt_cache_example.py  cross_platform_examples.py  custom_instructions_example.py  data_extraction_example.py  docker_provider_examples.py  environment_variables_example.py  git_checkpoint_example.py  mcp_health_check_example.py  progress_callback_usage.py  seatbelt_example.py  tinyagent_responses_three_tools.py  tinycode_modal_session_demo.py
juno_docs/: tinyagent_code_agent_api.md  tinyagent_hooks_api.md  tinyagent_mcp_client_api.md  tinyagent_memory_manager_api.md  tinyagent_prompts_api.md
product_manager/: file_manipulation_tools_roadmap.md  support_openai_responses_api.md
test/: test_tiny_agent_memory.py
tests/: conftest.py  test_full_integration.py  test_kwargs_issue.py  test_mcp_client_multiple.py  test_multi_cache.py  test_real_agent.py
tinyagent/: __init__.py  mcp_client.py  memory_manager.py  tiny_agent.py  tiny_agent_memory.py
tinyagent/code_agent/: README.md  modal_sandbox.py  safety.py  security_bypass.md  tiny_code_agent.py  utils.py
tinyagent/core/: openai_responses_adapter.py
tinyagent/hooks/: __init__.py  gradio_callback.py  (+5 more)
(+15 files in other folders)
